@@ -43,6 +43,8 @@ MultiFit: string
   Logo: TRUE/FALSE
   DebugLevel: int
   RunROOTMacros: TRUE/FALSE
+  POILabel: string
+  POINominal: float
 
 Fit: string
   Options: string
